Sparkling Crystal Collector

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 </head>
 <body>
+
+    <font id = "crystalcollector">Crystal Collector</font>
   
   <div id = "instructionsdiv">
     <p>There are four crystals below. By clicking on a crystal you will add a random amount of points to your total score.</p>
