--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+    <link href = "assets/css/reset.css"> 
 
 </head>
 <body>
